[package]
name = "glium_derive"
version = "0.1.3"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
description = "Custom derive for glium Vertex"
license = "MIT"
repository = "https://github.com/voidxnull/glium_derive"
documentation = "https://docs.rs/glium_derive"
keywords = ["glium", "derive", "vertex"]
categories = ["rendering"]

[lib]
proc-macro = true

[dependencies]
syn = "0.14.2"
quote = "0.6.3"
